--- a/templates/chemist.html
+++ b/templates/chemist.html
@@ -55,12 +55,18 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="/" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="create-product">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="chemist">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">My Page</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
+                            <i class="fas fa-user-alt mr-1"></i>
+                            <p class="m-0">Log out</p>
                         </a>
                     </li>
                 </ul>
