--- a/templates/client.html
+++ b/templates/client.html
@@ -40,7 +40,7 @@
                     <li>
                         <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
                             <i class="fas fa-user-alt mr-1"></i>
-                            <p class="m-0">Log in</p>
+                            <p class="m-0">Log out</p>
                         </a>
                     </li>
                     <li>
