--- a/templates/create-product.html
+++ b/templates/create-product.html
@@ -28,7 +28,7 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="/" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
                         <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="create-product">
@@ -36,14 +36,13 @@
                             <p class="m-0">My Page</p>
                         </a>
                     </li>
+                    <li>
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
+                            <i class="fas fa-user-alt mr-1"></i>
+                            <p class="m-0">Log out</p>
+                        </a>
+                    </li>
                 </ul>
-                <div class="header-mobile d-flex d-lg-none align-items-center">
-                    <a class="cart-m position-relative" href="#">
-                        <img src="../static/img/icon/shopping-cart.svg" alt="shopping-cart">
-                        <p class="cart-mark rounded-circle bg-primary text-white">3</p>
-                    </a>
-                    <a class="ham" href="#"><img src="../static/img/icon/bars.svg" alt="ham"></a>
-                </div>
             </nav>
         </div>
         <div class="container-fluid">
