--- a/templates/existing-products.html
+++ b/templates/existing-products.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Süskind - Create Products</title>
+    
+    <title>Süskind</title>
+
     <link rel="shortcut icon" href="../static/img/logo/Süskind-title.png">
-    <meta name='description' content='Create products for perfume shop' />
+    <meta name='description' content='the website of perfume shop' />
+
     <meta property="og:title" content="Süskind" />
-    <meta property="og:description" content="Create products for perfume shop">
+    <meta property="og:description" content="the website of perfume shop">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Süskind" />
-    <meta property="og:image" content="static/img/main-banner.png" />
+    <meta property="og:image" content="../static/img/main-banner.png" />
+
     <link href="../static/img/logo/Süskind.png" rel="apple-touch-icon" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+
     <link rel="stylesheet" href="../static/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <script src="../static/js/jquery-3.5.1.min.js"></script>
@@ -22,21 +28,34 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="index" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="/" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
-                    <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html"><i class="fas fa-tshirt mr-2"></i><p class="m-0">Product</p></a></li>
-                    <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/member.html"><i class="fas fa-user-alt mr-1"></i><p class="m-0">My Page</p></a></li>
-                    <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="#"><i class="fas fa-shopping-cart mr-2"></i></a></li>
+                    <li>
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="create-product">
+                            <i class="fas fa-user-alt mr-1"></i>
+                            <p class="m-0">My Page</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
+                            <i class="fas fa-user-alt mr-1"></i>
+                            <p class="m-0">Log out</p>
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
+        <div class="container-fluid">
+            <ul class="header_menu-m d-block d-lg-none w-100 p-0">
+                <li><a href="create-product" class="d-block text-white px-0 py-3">My Page</a></li>
+            </ul>
+        </div>        
     </header>
-    
     <!--Page Content Start-->
     <div class="product_category bg-primary d-none d-lg-flex mb-80px">
-        <ul class="d-flex m-0 p-0">
-            <li><a class="d-block text-white p-3 text-center">Welcome back!</a></li>
-        </ul>
+            <ul class="d-flex m-0 p-0">
+                <li><a class="d-block text-white p-3 text-center">Creator page</a></li>
+            </ul>
     </div>
     <div class="container mt-5">
         <div class="row">
