--- a/templates/product.html
+++ b/templates/product.html
@@ -27,7 +27,6 @@
     <script src="../static/js/jquery-3.5.1.min.js"></script>
     <script src="../static/js/all.js"></script>
 </head>
-
 <body>
     <header class="position-relative">
         <div class="container">
@@ -80,7 +79,7 @@
     <div class="product_category bg-primary d-none d-lg-flex mb-80px">
         <div class="container">
             <ul class="d-flex m-0 p-0">
-                <li><a href="product-all" class="d-block text-white p-3">All</a></li>
+                <li><a href="product" class="d-block text-white p-3">All</a></li>
                 <li><a href="product-women" class="d-block text-white p-3">Women</a></li>
                 <li><a href="product-men" class="d-block text-white p-3">Men</a></li>
             </ul>
@@ -96,7 +95,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">RUBY</h3>
                             <p class="card-text text-center">Women</p>
-                            <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -113,7 +112,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">SAPPHIRE</h3>
                             <p class="card-text text-center">Women</p>
-                            <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -130,7 +129,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">EMERALD</h3>
                             <p class="card-text text-center">Women</p>
-                            <p class="text-center">$1,380</p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -147,7 +146,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">OPAL</h3>
                             <p class="card-text text-center">Women</p>
-                            <p class="text-center">$1,380</p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -170,7 +169,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">EARTH</h3>
                             <p class="card-text text-center">Men</p>
-                            <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -187,7 +186,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">FIRE</h3>
                             <p class="card-text text-center">Men</p>
-                            <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -204,7 +203,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">AIR</h3>
                             <p class="card-text text-center">Men</p>
-                            <p class="text-center">$1,380</p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -221,7 +220,7 @@
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">WATER</h3>
                             <p class="card-text text-center">Men</p>
-                            <p class="text-center">$1,380</p>
+                            <p class="text-center">$75</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
                                     <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
@@ -244,11 +243,6 @@
                         <p class="text-white m-0">© 2020. All Rights Reserved.</p>
                     </div>
                     <nav class="d-none d-lg-block">
-                        <ul class="d-flex m-0">
-                            <li><a href="product" class="text-white">Product</a></li>
-                            <li><a href="#" class="text-white">Blog</a></li>
-                            <li><a href="#" class="text-white">Contact</a></li>
-                        </ul>
                     </nav>
                 </div>
             </div>
